@@ -1,0 +1,27 @@
+<?php
+/***************************************************************************
+ *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
+ *                                                                         *
+ *   This program is free software; you can redistribute it and/or modify  *
+ *   it under the terms of the GNU General Public License as published by  *
+ *   the Free Software Foundation; either version 2 of the License, or     *
+ *   (at your option) any later version.                                   *
+ *                                                                         *
+ ***************************************************************************/
+/* $Id$ */
+
+	/**
+	 * @ingroup Projections
+	**/
+	abstract class BaseProjection implements ObjectProjection
+	{
+		protected $property	= null;
+		protected $alias	= null;
+		
+		public function __construct($propertyName = null, $alias = null)
+		{
+			$this->property = $propertyName;
+			$this->alias = $alias;
+		}
+	}
+?>
