@@ -69,7 +69,9 @@
 		// core classes
 		.ONPHP_CORE_PATH.'Base'			.PATH_SEPARATOR
 		.ONPHP_CORE_PATH.'Cache'		.PATH_SEPARATOR
+		
 		.ONPHP_CORE_PATH.'Criteria'		.PATH_SEPARATOR
+		.ONPHP_CORE_PATH.'Criteria'.DIRECTORY_SEPARATOR.'Projections'.PATH_SEPARATOR
 		
 		.ONPHP_CORE_PATH.'DB'			.PATH_SEPARATOR
 		.ONPHP_CORE_PATH.'DB'.DIRECTORY_SEPARATOR.'Transaction'.PATH_SEPARATOR
