@@ -2,6 +2,9 @@
 
 2006-12-29	Konstantin V. Arkhipov
 
+	* core/Criteria/Projections: several simple object projections added
+	for usage in Criteria.
+
 	* main/Base/LightMetaProperty.class.php: light version of
 	MetaClassProperty for usage in userspace.
 
